Fixed backface visibility issue in firefox and chrome

--- a/css/main.css
+++ b/css/main.css
@@ -122,7 +122,7 @@ CSS for Flip Card Effect
   transition: transform  0.5s ease-in-out;
   -webkit-transition:transform  1s ease-in-out;
   -moz-transition:transform  1s ease-in-out;  
-    backface-visibility: hidden;
+    -moz-backface-visibility: hidden;
 }
 
 .project-card > div{
@@ -132,13 +132,11 @@ CSS for Flip Card Effect
   width: 100%;
   height: 100%;
   backface-visibility: hidden;
-  -webkit-backface-visibility: hidden;
+/*  -webkit-backface-visibility: hidden;*/
   text-align: left;  
 }
 
-/*.project-card .front {
-  background: red;
-}*/
+
 .project-card .back {
   transform: rotateY( 180deg );
 }
@@ -169,8 +167,7 @@ CSS for Flip Card Effect
     text-align: center;
     font-size: 1.5em;
     color: #324851;
-    margin-bottom: 5px;
-   
+    margin-bottom: 5px;   
 }
 /*---------------------------------------
  Animations while showing Project Details
@@ -232,7 +229,7 @@ CSS for Flip Card Effect
 /*      margin-right: 5px;*/
 }
 
-.flip-div{
+.flip-highlights-div{
       animation-delay: 0s, 7s;
       -moz-animation-delay: 0s,7s;
       -webkit-animation-delay: 0s, 7s;
@@ -381,9 +378,9 @@ a.button {
     
 .lightbox-content {
     top: 1%;
-    left: 10%;
-    width: 80%;
-    height: 80%;
+    left: 5%;
+    width: 90%;
+    height: 90%;
     padding: 12px;
     border: 12px solid #DE7A72;  
     }
@@ -399,8 +396,14 @@ a.button {
     }
     
     .lightbox-content {
+        width: 80%;
+        height: 80%;
         padding: 16px;
         border: 16px solid #DE7A72;
+    }
+    
+    #project-main-heading{
+        margin-bottom: 20px;
     }
   
 }
